{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 33,
  "lineage": "35e20cde-05fd-6afb-0b15-456161e802ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8d972dd721f8d49",
            "association_id": "eipassoc-096f42aedcbbc2f90",
            "domain": "vpc",
            "id": "eipalloc-0a8d972dd721f8d49",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0017c1e6f3bf40425",
            "private_dns": "ip-10-0-0-117.ec2.internal",
            "private_ip": "10.0.0.117",
            "public_dns": "ec2-52-6-2-139.compute-1.amazonaws.com",
            "public_ip": "52.6.2.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025114b02aa8d654e",
            "domain": "vpc",
            "id": "eipalloc-025114b02aa8d654e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-112-62.compute-1.amazonaws.com",
            "public_ip": "34.232.112.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kinzh-eip"
            },
            "tags_all": {
              "Name": "kinzh-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-009ee9345033cc2b0",
            "id": "igw-009ee9345033cc2b0",
            "owner_id": "782863115905",
            "tags": {
              "Name": "kinzh-IGW"
            },
            "tags_all": {
              "Name": "kinzh-IGW"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8d972dd721f8d49",
            "connectivity_type": "public",
            "id": "nat-01943ba1260cb8d7a",
            "network_interface_id": "eni-0017c1e6f3bf40425",
            "private_ip": "10.0.0.117",
            "public_ip": "52.6.2.139",
            "subnet_id": "subnet-0534fcaf968f14416",
            "tags": {
              "Name": "kinzh-NGW"
            },
            "tags_all": {
              "Name": "kinzh-NGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8d972dd721f8d49",
            "connectivity_type": "public",
            "id": "nat-0678493ae21bd9b3a",
            "subnet_id": "subnet-0a54d4bf09a888ba2",
            "tags": {
              "Name": "kinzh-NGW"
            },
            "tags_all": {
              "Name": "kinzh-NGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eeee0587dc4f08671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01943ba1260cb8d7a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eeee0587dc4f0867",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_NAT",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-009ee9345033cc2b0",
            "id": "r-rtb-0642ad7b34887415d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0642ad7b34887415d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0eeee0587dc4f0867",
            "id": "rtb-0eeee0587dc4f0867",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01943ba1260cb8d7a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kinzh-Private-RT"
            },
            "tags_all": {
              "Name": "kinzh-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-0642ad7b34887415d",
            "id": "rtb-0642ad7b34887415d",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009ee9345033cc2b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kinzh-Public-RT"
            },
            "tags_all": {
              "Name": "kinzh-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42487aa088ece70",
            "route_table_id": "rtb-0eeee0587dc4f0867",
            "subnet_id": "subnet-06e449cb5c9a1f167"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e95f2d81b797d01d",
            "route_table_id": "rtb-0eeee0587dc4f0867",
            "subnet_id": "subnet-09947057cfa4488f8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a21adea4ecd886e",
            "route_table_id": "rtb-0eeee0587dc4f0867",
            "subnet_id": "subnet-07967ef914fc11317"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0031c03b6efbfb480",
            "route_table_id": "rtb-0eeee0587dc4f0867",
            "subnet_id": "subnet-06d4b4bcc0f22cd4f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e199d5ab84b9e79",
            "route_table_id": "rtb-0642ad7b34887415d",
            "subnet_id": "subnet-0534fcaf968f14416"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d95a977f1fef959",
            "route_table_id": "rtb-0642ad7b34887415d",
            "subnet_id": "subnet-0a54d4bf09a888ba2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppInstanceSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0a58c8e6be8e8001e",
            "description": "Security Group allowing HTTP traffic for instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a58c8e6be8e8001e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "2600:1f10:4f2a:5b00::/56"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AppInstanceSecurityGroup",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kinzh-App-SG"
            },
            "tags_all": {
              "Name": "kinzh-App-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFSMountTargetSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0c9fc47345e0d4714",
            "description": "Security Group allowing traffic between EFS Mount Targets and Amazon EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9fc47345e0d4714",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "2600:1f10:4f2a:5b00::/56"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EFSMountTargetSecurityGroup",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kinzh-EFS-SG"
            },
            "tags_all": {
              "Name": "kinzh-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDSSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:security-group/sg-0d97b43170f5bea7e",
            "description": "Security Group allowing RDS instances to have internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d97b43170f5bea7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "2600:1f10:4f2a:5b00::/56"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "782863115905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kinzh-RDS-SG"
            },
            "tags_all": {
              "Name": "kinzh-RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-06e449cb5c9a1f167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e449cb5c9a1f167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "kinzh-Private-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-09947057cfa4488f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09947057cfa4488f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "kinzh-Private-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-07967ef914fc11317",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07967ef914fc11317",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Private-Subnet-us-east-1c"
            },
            "tags_all": {
              "Name": "kinzh-Private-Subnet-us-east-1c"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-06d4b4bcc0f22cd4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d4b4bcc0f22cd4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Private-Subnet-us-east-1d"
            },
            "tags_all": {
              "Name": "kinzh-Private-Subnet-us-east-1d"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0534fcaf968f14416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0534fcaf968f14416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "kinzh-Public-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0a54d4bf09a888ba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a54d4bf09a888ba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kinzh-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "kinzh-Public-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-0c2ce70410aa10902"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-0c2ce70410aa10902",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a17fbda34ffdc92",
            "default_route_table_id": "rtb-0b2c7cfe450c550c1",
            "default_security_group_id": "sg-0aee5ebfcc63cb1cc",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2ce70410aa10902",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06519ce73d9fe832f",
            "ipv6_cidr_block": "2600:1f10:4f2a:5b00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2c7cfe450c550c1",
            "owner_id": "782863115905",
            "tags": {
              "Name": "kinzh-VPC"
            },
            "tags_all": {
              "Name": "kinzh-VPC"
            }
          }
        }
      ]
    }
  ]
}